# rvc_control_vibe

./: CMakeLists.txt  README.md
.cursor/plans/: rvc_control_sw_plan_1aebcbbc.plan.md
.cursor/rules/: cpp-formatting.mdc
cmake/: gtest.cmake
doc/: Class_Diagram.md  Module_View.md  Preliminary_Requirements.md  Sequence_Diagram.md  Simulator_Architecture.md  UseCase_Diagram.md
scripts/: coverage.ps1  summarize_coverage.py
simulator/server/: CMakeLists.txt  main.cpp  scenario_definitions.cpp  scenario_definitions.hpp  scenario_runner.cpp  scenario_runner.hpp  scenario_test_main.cpp  simulator_service.cpp  simulator_service.hpp  switchable_turn_strategy.cpp  switchable_turn_strategy.hpp
simulator/web/: app.js  index.html
src/adapters/cli/: main.cpp
src/adapters/in_memory/: cleaning_session_adapter.cpp  cleaning_session_adapter.hpp  fake_timer.cpp  fake_timer.hpp  fixed_turn_strategy.cpp  fixed_turn_strategy.hpp  in_memory_cleaning_actuator.cpp  in_memory_cleaning_actuator.hpp  in_memory_motion_actuator.cpp  in_memory_motion_actuator.hpp  in_memory_sensor_reader.cpp  in_memory_sensor_reader.hpp  prefer_left_turn_strategy.cpp  prefer_left_turn_strategy.hpp
src/application/: cleaning_service.cpp  cleaning_service.hpp
src/domain/: cleaning_mode.hpp  cleaning_state_machine.cpp  cleaning_state_machine.hpp  motion_command.hpp  robot_state.hpp  sensor_snapshot.hpp
src/ports/: cleaning_actuator.hpp  cleaning_session.hpp  motion_actuator.hpp  sensor_reader.hpp  timer.hpp  turn_strategy.hpp
tests/application/: cleaning_service_test.cpp  test_fakes.cpp  test_fakes.hpp
tests/domain/: cleaning_state_machine_test.cpp
